<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ListingsDetails">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:backgroundTint="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/arrow"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/arrow"
            android:layout_gravity="start|center"/>

        <TextView
            android:id="@+id/moreDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:textColor="@color/onBackground"
            android:text="@string/property_details"/>
    </androidx.cardview.widget.CardView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/property_name"
            android:text="xxxx"
            android:textSize="18sp"
            android:textColor="@color/onBackground"
            app:layout_constraintStart_toEndOf="@id/property"
            app:layout_constraintTop_toBottomOf="@id/appBar"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/property"
            android:text="@string/property"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginHorizontal="10dp"
            android:textColor="@color/onBackground"
            app:layout_constraintEnd_toStartOf="@+id/property_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appBar"
            android:layout_marginTop="5dp"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/image_card1"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardCornerRadius="15dp"
            app:layout_constraintTop_toBottomOf="@+id/property_name">

            <ImageView
                android:id="@+id/extraImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/home"/>
        </androidx.cardview.widget.CardView>


    <View
        android:id="@+id/view"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/onBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/status"/>

    <TextView
        android:id="@+id/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type"
        android:textSize="18sp"
        android:layout_marginTop="15dp"
        android:textColor="@color/onBackground"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view"
        android:layout_marginHorizontal="10dp"/>
    <TextView
        android:id="@+id/typeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="xxxx"
        android:textSize="18sp"
        android:layout_marginTop="15dp"
        android:textColor="@color/onBackground"
        app:layout_constraintStart_toEndOf="@id/type"
        app:layout_constraintTop_toBottomOf="@id/view"
        android:layout_marginHorizontal="10dp"/>

    <TextView
        android:id="@+id/uniqueType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unique_type"
        android:textSize="18sp"
        android:textColor="@color/onBackground"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/type"
        android:layout_marginHorizontal="10dp"/>

    <TextView
        android:id="@+id/space"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/space"
        android:textSize="18sp"
        android:textColor="@color/onBackground"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/uniqueType"
        android:layout_marginHorizontal="10dp"/>

    <TextView
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rating"
        android:textSize="18sp"
        android:textColor="@color/onBackground"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/space"
        android:layout_marginHorizontal="10dp"/>

    <TextView
        android:id="@+id/uniqueTypeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="xxxx"
        android:textSize="18sp"
        android:layout_marginTop="15dp"
        android:textColor="@color/onBackground"
        app:layout_constraintStart_toEndOf="@id/uniqueType"
        app:layout_constraintTop_toBottomOf="@id/type"
        android:layout_marginHorizontal="10dp"/>

    <TextView
        android:id="@+id/spaceValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="xxxx"
        android:textSize="18sp"
        android:layout_marginTop="15dp"
        android:textColor="@color/onBackground"
        app:layout_constraintStart_toEndOf="@id/space"
        app:layout_constraintTop_toBottomOf="@id/uniqueType"
        android:layout_marginHorizontal="10dp"/>
    <TextView
        android:id="@+id/ratingValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="xxxx"
        android:textSize="18sp"
        android:layout_marginTop="15dp"
        android:textColor="@color/onBackground"
        app:layout_constraintStart_toEndOf="@id/rating"
        app:layout_constraintTop_toBottomOf="@id/space"
        android:layout_marginHorizontal="10dp"/>

    <View
        android:id="@+id/view1"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/onBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rating"/>

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:textColor="@color/onBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_card1"
        android:layout_marginHorizontal="10dp"/>

    <TextView
        android:id="@+id/bookings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bookings"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:textColor="@color/onBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view1"
        android:layout_marginHorizontal="10dp"/>
    <TextView
        android:id="@+id/bookingsValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="xxx"
        android:textSize="18sp"
        android:layout_marginTop="15dp"
        android:textColor="@color/onBackground"
        app:layout_constraintStart_toEndOf="@id/bookings"
        app:layout_constraintTop_toBottomOf="@id/view1"
        android:layout_marginHorizontal="10dp"/>

    <TextView
        android:id="@+id/statusValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="xxx"
        android:textSize="18sp"
        android:layout_marginTop="15dp"
        android:textColor="@color/onBackground"
        app:layout_constraintStart_toEndOf="@id/status"
        app:layout_constraintTop_toBottomOf="@id/image_card1"
        android:layout_marginHorizontal="10dp"/>

    <TextView
        android:id="@+id/amenities"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amenities"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:textColor="@color/onBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="10dp"/>

    <View
        android:id="@+id/view2"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/onBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calendarView"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView1"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/amenities"/>

    <View
        android:id="@+id/view3"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/onBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recyclerView1"/>

        <TextView
            android:id="@+id/rules"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rules"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:textColor="@color/onBackground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view3"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="10dp"/>
        <TextView
            android:id="@+id/checkOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_out_time"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:textColor="@color/onBackground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rules"
            android:layout_marginHorizontal="10dp"/>
        <TextView
            android:id="@+id/checkIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_in_time"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:textColor="@color/onBackground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checkOut"
            android:layout_marginHorizontal="10dp"/>
        <TextView
            android:id="@+id/checkInValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="xxxx"
            android:textSize="18sp"
            android:layout_marginTop="15dp"
            android:textColor="@color/onBackground"
            app:layout_constraintStart_toEndOf="@id/checkIn"
            app:layout_constraintTop_toBottomOf="@id/checkOut"
            android:layout_marginHorizontal="10dp"/>
        <TextView
            android:id="@+id/checkOutValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="xxxx"
            android:textSize="18sp"
            android:layout_marginTop="15dp"
            android:textColor="@color/onBackground"
            app:layout_constraintStart_toEndOf="@id/checkOut"
            app:layout_constraintTop_toBottomOf="@id/rules"
            android:layout_marginHorizontal="10dp"/>

        <View
            android:id="@+id/view4"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/onBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checkIn"/>

        <TextView
            android:id="@+id/maps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_location_on_maps"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:textColor="@color/onBackground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view4"
            android:layout_marginHorizontal="10dp"/>

        <TextView
            android:id="@+id/bookedDates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/booked_dates"
            android:layout_marginTop="30dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/onBackground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bookings"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="10dp"/>

        <com.prolificinteractive.materialcalendarview.MaterialCalendarView
            android:id="@+id/calendarView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:mcv_selectionMode="multiple"
            app:mcv_selectionColor="@color/colorPrimary"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bookedDates"
            android:padding="5dp"/>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/google_maps"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/maps"/>



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>